--- a/XpertTools.Blazor.Server/App.razor
+++ b/XpertTools.Blazor.Server/App.razor
@@ -1,6 +1,7 @@
 ﻿<Router AppAssembly="@typeof(Program).Assembly" AdditionalAssemblies="new[] { typeof(DevExpress.ExpressApp.Blazor.BlazorApplication).Assembly }">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" />
+
     </Found>
     <NotFound>
         <LayoutView>
@@ -9,3 +10,10 @@
         </LayoutView>
     </NotFound>
 </Router>
+
+@using DevExpress.ExpressApp.Security;
+@using DevExpress.Persistent.BaseImpl.PermissionPolicy;
+
+@inject IJSRuntime jsRuntume
+@inject DevExpress.ExpressApp.Blazor.Services.IXafApplicationProvider appProvider
+
