--- a/XpertTools.Blazor.Server/Pages/_Host.cshtml
+++ b/XpertTools.Blazor.Server/Pages/_Host.cshtml
@@ -20,7 +20,8 @@
         string userAgent = Request.Headers["User-Agent"];
         bool isIE = userAgent.Contains("MSIE") || userAgent.Contains("Trident");
     }
-    @if(isIE) {
+    @if (isIE)
+    {
         <link href="css/site.css" rel="stylesheet" />
         <div class="d-flex flex-column justify-content-center align-items-center h-100">
             <div class="d-flex">
@@ -29,27 +30,66 @@
                     <div class="h1">Internet Explorer is not supported.</div>
                     <p style="font-size: 1rem; opacity: 0.75;" class="m-0">XpertTools cannot be loaded in Internet Explorer.<br>Please use a different browser.</p>
                 </div>
+
+
             </div>
         </div>
     }
-    else {
+    else
+    {
         <component type="typeof(SplashScreen)" render-mode="Static" param-Caption='"XpertTools"' param-ImagePath='"images/SplashScreen.svg"' />
 
         <link href="_content/DevExpress.ExpressApp.Blazor/styles.css" rel="stylesheet" />
         <link href="css/site.css" rel="stylesheet" />
         <script src="_content/DevExpress.ExpressApp.Blazor/scripts.js"></script>
-
         <app class="d-none">
             <component type="typeof(App)" render-mode="Server" />
         </app>
-        
+
         <component type="typeof(AlertsHandler)" render-mode="Server" />
 
         <div id="blazor-error-ui">
             <component type="typeof(BlazorError)" render-mode="Static" />
         </div>
 
-        <script src="_framework/blazor.server.js"></script>
+
+        <script src="_framework/blazor.server.js">
+
+            </script>
+
+        <script>
+            window.setLogoText = function (text) {
+                var NameHolder = document.createElement("div");
+                NameHolder.className = "XpertPDALogo";
+                var Text = document.createTextNode(text);
+                NameHolder.appendChild(Text);
+
+@*                var styleNode = document.createElement('style');
+                styleNode.type = "text/css";
+                var styleText = document.createTextNode('.XpertPDALogo { color: rgb(255, 0, 0) !important;} ');
+                styleNode.appendChild(styleText);*@
+
+                var viewcaption = document.getElementsByClassName("view-caption-root")[0];
+                viewcaption.insertAdjacentElement("afterend", NameHolder);
+            };
+        </script>
+
+      @*  <script>
+            window.setLogoText = function (text) {
+                var NameHolder = document.createElement("div");
+                NameHolder.className = "XpertPDALogo";
+                var Text = document.createTextNode("XpertERP PDA");
+                NameHolder.appendChild(Text);
+
+                var styleNode = document.createElement('style');
+                styleNode.type = "text/css";
+                var styleText = document.createTextNode('.XpertPDALogo { color: rgb(255, 0, 0); } ');
+                styleNode.appendChild(styleText);
+
+                var viewcaption = document.getElementsByClassName("view-caption-root")[0];
+                viewcaption..insertAdjacentElement("afterend", NameHolder);
+            };
+        </script>*@
     }
 </body>
 </html>
